# typed-fields

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .taplo.toml  .yamllint.yml  CHANGELOG.md  Cargo.toml  Earthfile  LICENSE-MIT  README.md  justfile  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.earthly/markdown/: Earthfile
.earthly/prettier/: Earthfile
.earthly/rust/: Earthfile
.earthly/toml/: Earthfile
.earthly/yaml/: Earthfile
.flox/: env.json
.flox/env/: manifest.toml
.github/: dependabot.yml  flowcrafter.yml  labelflair.toml  renovate.json5
.github/workflows/: ci.yml  dependencies.yml  devcontainer.yml  github.yml  json.yml  labelflair.yml  markdown.yml  release.yml  rust.yml  yaml.yml
src/: lib.rs  name.rs  number.rs  path.rs  secret.rs  ulid.rs  url.rs  uuid.rs
tests/: name.rs  number.rs  path.rs  secret.rs  ulid.rs  url.rs  uuid.rs
tests/krate/: Cargo.toml
tests/krate/src/: lib.rs
