[package]
name = "typed-fields"
version = "0.2.0"
edition = "2021"

description = "A collection of macros that generate newtypes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdno/typed-fields"

# The transient dependency `ppv-lite86` does not compile on older Rust versions.
rust-version = "1.61"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true

[features]
secret = ["dep:secrecy"]
serde = [
    "dep:serde",
    "secrecy?/serde",
    "ulid?/serde",
    "url?/serde",
    "uuid?/serde",
]
ulid = ["dep:ulid"]
url = ["dep:url"]
uuid = ["dep:uuid"]

[dependencies]
proc-macro2 = ">=1.0.63"
quote = ">=1.0.28"
secrecy = { version = ">=0.4.1, <0.10.0", optional = true }
serde = { version = ">=1.0.103", features = ["derive"], optional = true }
syn = { version = ">=2.0.31", features = ["extra-traits"] }
ulid = { version = ">=1.1.3", optional = true }
url = { version = ">=2.2.0", optional = true }
uuid = { version = ">=1.0.0", optional = true }

# This is a transient dependency of the `ulid` feature, but we need to set its
# minimum version that is compatible with this crate.
zerocopy = { version = ">=0.7.31", optional = true }

[dev-dependencies]
serde_json = "1.0.0"
