[package]
name = "typed-fields"
version = "0.5.0"
edition = "2024"

description = "A collection of macros that generate newtypes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdno/typed-fields"

# Rust edition 2024 requires Rust 1.85.0 or newer.
rust-version = "1.85.0"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true

[features]
sea-orm = ["dep:sea-orm", "ulid?/uuid"]
secret = ["dep:secrecy"]
serde = [
  "dep:serde",
  "secrecy?/serde",
  "ulid?/serde",
  "url?/serde",
  "uuid?/serde",
]
ulid = ["dep:ulid"]
url = ["dep:url"]
uuid = ["dep:uuid"]

[dependencies]
proc-macro2 = ">=1.0.63, <2"
quote = ">=1.0.28, <2"
sea-orm = { version = ">=1.0.0, <2", optional = true }
secrecy = { version = ">=0.10.3, <0.11", optional = true }
serde = { version = ">=1.0.184, <2", features = ["derive"], optional = true }
syn = { version = ">=2.0.31, <3", features = ["extra-traits"] }
ulid = { version = ">=1.1.3, <2", optional = true }
url = { version = ">=2.2.2, <3", optional = true }
uuid = { version = ">=1.1.2, <2", optional = true }

[dev-dependencies]
serde_json = "1.0.85"
